fixing scss moviecard wrapping

--- a/src/features/movies/components/pages/moviecard.module.scss
+++ b/src/features/movies/components/pages/moviecard.module.scss
@@ -1,6 +1,10 @@
-.container {
+.scroller {
     display: flex;
     flex-wrap: wrap;
+}
+.container {
+    display: flex;
+
     height: 22rem;
     width: 15rem;
     background-color: rgb(190, 182, 182);
