--- a/src/infraestructure/components/pages/home.module.scss
+++ b/src/infraestructure/components/pages/home.module.scss
@@ -2,14 +2,15 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-left: 3rem;
+    width: 100%;
+
     & h1 {
         display: flex;
         justify-content: flex-start;
         width: 100%;
         font-size: 2rem;
         margin: 40px;
-        margin-left: 10px;
+        margin-left: 30px;
         color: #ffe49c;
         text-shadow: #c7f8f8 0px 0px 0px, #c7f8f8 0px 0px 50px,
             #d6ed27 0px 0px 1px;
